zap/tests/selene/snapshots/run_selene_test@one_unnamed_parameter@types.snap
---
source: zap/tests/selene/mod.rs
expression: types_diagnostics
input_file: zap/tests/files/one_unnamed_parameter.zap
---
[]
