zap/tests/selene/snapshots/run_selene_test@or_complex@tooling.snap
---
source: zap/tests/selene/mod.rs
expression: tooling_diagnostics
input_file: zap/tests/files/or_complex.zap
---
[
    CheckerDiagnostic {
        diagnostic: Diagnostic {
            code: "incorrect_standard_library_use",
            message: "standard library function `assert` requires 2 parameters, 1 passed",
            notes: [
                "A failed assertion without a message is unhelpful to users.",
            ],
            primary_label: Label {
                message: None,
                range: (
                    3454,
                    3474,
                ),
            },
            secondary_labels: [],
        },
        severity: Error,
    },
]
