zap/tests/selene/snapshots/run_selene_test@or_complex@types.snap
---
source: zap/tests/selene/mod.rs
expression: types_diagnostics
input_file: zap/tests/files/or_complex.zap
---
[]
