zap/tests/selene/snapshots/run_selene_test@or_unknown@client.snap
---
source: zap/tests/selene/mod.rs
expression: client_diagnostics
input_file: zap/tests/files/or_unknown.zap
---
[]
