zap/tests/selene/snapshots/run_selene_test@or_unknown@server.snap
---
source: zap/tests/selene/mod.rs
expression: server_diagnostics
input_file: zap/tests/files/or_unknown.zap
---
[]
