zap/tests/selene/snapshots/run_selene_test@or_unknown@tooling.snap
---
source: zap/tests/selene/mod.rs
expression: tooling_diagnostics
input_file: zap/tests/files/or_unknown.zap
---
[]
